--- a/settings.gradle
+++ b/settings.gradle
@@ -55,6 +55,7 @@ include 'tools:shell-cli'
 include 'tools:network-bootstrapper'
 include 'tools:cliutils'
 include 'tools:worldmap'
+include 'tools:checkpoint-agent'
 include 'example-code'
 project(':example-code').projectDir = file("$settingsDir/docs/source/example-code")
 include 'samples:attachment-demo:contracts'
@@ -96,4 +97,6 @@ if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
     include 'core-deterministic:testing:verifier'
     include 'serialization-deterministic'
 }
+include 'tools:checkpoint-agent'
+findProject(':tools:checkpoint-agent')?.name = 'checkpoint-agent'
 
