WIP - Add DJVM to contract verification path inside Corda Node.

--- a/node/build.gradle
+++ b/node/build.gradle
@@ -25,6 +25,9 @@ description 'Corda node modules'
 configurations {
     integrationTestCompile.extendsFrom testCompile
     integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
+    jdkRt.resolutionStrategy {
+        cacheChangingModulesFor 0, 'seconds'
+    }
 }
 
 sourceSets {
@@ -127,6 +130,10 @@ dependencies {
 
     // TypeSafe Config: for simple and human friendly config files.
     compile "com.typesafe:config:$typesafe_config_version"
+
+    // Sandbox for deterministic contract verification
+    implementation "net.corda:corda-djvm:$djvm_version"
+    jdkRt "net.corda:deterministic-rt:latest.integration"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_jupiter_version}"
     testImplementation "junit:junit:$junit_version"
